--- a/workout/package.json
+++ b/workout/package.json
@@ -2,6 +2,10 @@
   "name": "workout",
   "version": "0.1.0",
   "private": true,
+  "version": "1.0.0",
+  "engines": {
+    "node": "18.x"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.20",
