--- a/workout/package.json
+++ b/workout/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "version": "1.0.0",
   "engines": {
-    "node": "18.x"
+    "node": "18.13.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
