--- a/workout/package.json
+++ b/workout/package.json
@@ -6,6 +6,15 @@
   "engines": {
     "node": "18.13.0"
   },
+  "exports": {
+    ".": {
+      "require": "./lib/postcss.js",
+      "import": "./lib/postcss.mjs",
+      "types": "./lib/postcss.d.ts"
+      
+    },
+    "./": "./lib/tokenize"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.20",
