--- a/package.json
+++ b/package.json
@@ -1,31 +1,52 @@
 {
-    "name": "workout-server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "server.js",
-    "scripts": {
-        "setup": "npm install && cd workout && npm install && cd ..",
-        "build-run": "cd workout && npm run build && cd .. && node server.js",
-        "start": "node server.js",
-        "heroku-postbuild": "cd workout && npm install && npm run build",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "bcryptjs": "^2.4.3",
-        "body-parser": "^1.19.0",
-        "connect-mongo": "^4.4.1",
-        "cors": "^2.8.5",
-        "ejs": "^3.1.6",
-        "express": "^4.17.1",
-        "express-session": "^1.17.1",
-        "gridfs-stream": "^1.1.1",
-        "method-override": "^3.0.0",
-        "mongodb": "^3.6.5",
-        "mongoose": "^5.12.3",
-        "multer": "^1.4.2",
-        "multer-gridfs-storage": "^4.2.0",
-        "validator": "^13.5.2"
-    }
+  "name": "workout",
+  "private": true,
+  "version": "1.0.0",
+  "engines": {
+    "node": "18.13.0"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.20",
+    "@material-ui/icons": "^4.11.2",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.1",
+    "chart.js": "^2.9.4",
+    "fontsource-roboto": "^4.0.0",
+    "plupload": "^2.3.6",
+    "react": "^17.0.1",
+    "react-admin": "^3.12.4",
+    "react-chartjs-2": "^2.11.1",
+    "react-contenteditable": "^3.3.5",
+    "react-dom": "^17.0.1",
+    "react-player": "^2.9.0",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.2",
+    "web-vitals": "^1.1.0"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
