--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "workout",
   "private": true,
   "version": "1.0.0",
+  "engines": {
+    "node": "16.14.2"
+  },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.20",
